[package]
name = "prog_fund_3_things"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.8.2"
dashu-base = "0.4.1"
dashu-float = "0.4.3"
fastrand = "2.3.0"
fxhash = "0.2.1"
# image = "0.25.10"
imageproc = "0.26.1"
tinyset = "0.5.2"
tinyvec = "1.10.0"
perf_tracer = { path = "perf_tracer" }
perf_tracer_macros = { path = "perf_tracer_macros" }
rayon = "1.11.0"

[[bench]]
name = "eight_queens"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package.imageproc]
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
